# m4-rs

./: AUTOCONF-RS-BUILD-PROMPT.md  Cargo.toml  LICENSE  README.md  STATUS.md  new_builtins.txt
crates/m4-casefile-rs/: Cargo.toml  README.md
crates/m4-casefile-rs/src/: lib.rs
crates/m4-oracle-rs/: Cargo.toml  README.md
crates/m4-oracle-rs/src/: behavior_doc.rs  lib.rs  multi_oracle.rs
crates/m4-rs-cli/: Cargo.toml  README.md
crates/m4-rs-cli/src/: lib.rs  main.rs
crates/m4-rs-core/: Cargo.toml  README.md
crates/m4-rs-core/src/: args.rs  builtin.rs  comment.rs  diagnostics.rs  diversion.rs  eval.rs  expansion.rs  format.rs  frozen.rs  include_.rs  input.rs  lexer.rs  lib.rs  macro_table.rs  profile.rs  quote.rs  regexp.rs  stack.rs  token.rs  trace.rs
crates/m4-rs-core/tests/: autoconf_seed.rs  frozen_smoke.rs  gnu_test_suite.rs
docs/: CODE-ARCHAEOLOGY-ATLAS.md  REVIEW-IN-10-MINUTES.md  SOURCE-AUDIT.md  autoconf-survival.md  compatibility.md  diagnostics.md  filesystem-effects.md  negative-capabilities.md  oracle-profile.md  parity-ladder.md  process-effects.md  source-archaeology.md
fixtures/autoconf/: 01-basic-macros.m4  02-conditionals.m4  03-forloop.m4  04-arithmetic.m4  05-quote-nesting.m4  06-diversions.m4  07-text-manipulation.m4  08-include.m4  09-shell-cmds.m4  10-ac-init.m4
fuzz/: Cargo.toml
fuzz/fuzz_targets/: eval_expression.rs  expansion_engine.rs  lexer_bytes.rs
kani/: proofs.rs  proofs_diversion.rs
lab/: basic_test.m4  concat_test.m4  define_unquoted.m4  forloop_test.m4  forloop_test_small.m4  ifelse_expand_test.m4  ifelse_test2.m4  verify-sealed-courts.sh
lab/corpus/: setup-qemu-vm.sh
lab/corpus/layer0-smoke/: 001-simple-define.m4  002-define-with-args.m4  003-nested-define.m4  004-changequote.m4  005-ifelse.m4  006-ifdef.m4  007-dnl.m4  008-pushdef-popdef.m4  009-eval.m4  010-len.m4  011-changecom.m4  012-shift.m4  013-translit.m4  014-substr.m4  015-index.m4  016-regexp.m4  017-incr-decr.m4  018-format.m4  019-divert.m4  020-eval-radix.m4
lab/corpus/layer2-manual-examples/: 021-define-simple.m4  022-define-with-args.m4  023-define-nested.m4  024-undefine.m4  025-pushdef-popdef.m4  026-defn.m4  027-indir.m4  028-builtin.m4  029-ifelse-match.m4  030-ifelse-no-match.m4  031-ifdef.m4  032-shift.m4  033-forloop.m4  034-foreach.m4  035-dnl.m4  036-changequote.m4  037-changequote-disable.m4  038-changecom.m4  039-diversions.m4  040-undivert-file.m4  041-len.m4  042-index.m4  043-substr.m4  044-translit.m4  045-regexp.m4  046-patsubst.m4  047-eval.m4  048-format.m4  049-incr-decr.m4  050-m4wrap.m4  051-errprint.m4  052-syscmd.m4  testfile.txt
lab/corpus/layer3-posix/: posix-001-basic.m4
lab/corpus/receipts/: comparison-receipt.json  perf-baseline.json  smoke-receipt.json
reports/: FORENSIC-GAP-ANALYSIS.md  NEEDLE-REPORT.md  claim-ladder.json  doc-registry.json  oracle-profile.json  parity-matrix.json
reports/receipts/: cleanroom-receipt.json  fuzz-1M-receipt.json
sources/courts/: corpus-layers.json  known-failures.json  surfaces.json
sources/docs/: autoconf-survival.json  compatibility.json  crate-readme-casefile.json  crate-readme-cli.json  crate-readme-core.json  crate-readme-oracle.json  crate-readme-xtask.json  diagnostics.json  filesystem-effects.json  oracle-profile.json  parity-ladder.json  process-effects.json  status.json
sources/gaps/: master-gap-analysis.json  needle-metrics.json
sources/negcaps/: structured-negative-capabilities.json
src/: lib.rs  main.rs
xtask/: Cargo.toml  README.md
xtask/src/: ast_verify.rs  bench.rs  cleanroom.rs  compare.rs  fuzz.rs  gnu_compare.rs  main.rs  smoke.rs
xtask/src/docgen/: dsse.rs  generate.rs  mod.rs  sync_metrics.rs
