[package]
name = "m4-rs"
version = "0.1.5"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
keywords = ["m4", "macro", "preprocessor", "autoconf", "gnu"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "m4-rs"
path = "src/main.rs"

[dependencies]
m4-rs-core = { version = "0.1.5", path = "crates/m4-rs-core" }
m4-oracle-rs = { version = "0.1.2", path = "crates/m4-oracle-rs" }
m4-casefile-rs = { version = "0.1.2", path = "crates/m4-casefile-rs" }
m4-rs-cli = { version = "0.1.2", path = "crates/m4-rs-cli" }

[workspace]
resolver = "2"
members = [
    "crates/m4-rs-core",
    "crates/m4-rs-cli",
    "crates/m4-oracle-rs",
    "crates/m4-casefile-rs",
    "xtask",
]

[profile.release]
# Maximize runtime performance for parity benchmarks.
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infinityabundance/m4-rs"
authors = ["infinityabundance <255699974+infinityabundance@users.noreply.github.com>"]
description = "Forensic-parity Rust reimplementation of GNU m4 behavior through oracle courts."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
