[package]
name = "m4-casefile-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Receipt schema and casefile types for m4-rs forensic parity courts."

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
