[package]
name = "m4-oracle-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU m4 oracle admission crate: locate, fingerprint, and query a pinned m4 binary."

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
